force-app/main/default/objects/POC_Product_Picker_Matrix__mdt/POC_Product_Picker_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>POC Product Picker Matrix</label>
    <pluralLabel>POC Product Picker Matrix</pluralLabel>
</CustomObject>