force-app/main/default/objects/POC_Product_Picker_Matrix__mdt/fields/OPTY_POC_Product_Picker_Type__c.field-meta.xml
<CustomField>
    <fullName>OPTY_POC_Product_Picker_Type__c</fullName>
    <label>OPTY POC Product Picker Type</label>
    <referenceTo>POC_Product_Picker_Type__mdt</referenceTo>
    <relationshipLabel>POC Product Picker Matrix</relationshipLabel>
    <relationshipName>POC_Product_Picker_Matrix</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>