force-app/main/default/objects/POC_Product_Picker_Matrix__mdt/fields/POC_Option__c.field-meta.xml
<CustomField>
    <fullName>POC_Option__c</fullName>
    <label>POC Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>