force-app/main/default/objects/POC_Product_Picker_Matrix__mdt/fields/Polaris_Platform__c.field-meta.xml
<CustomField>
    <fullName>Polaris_Platform__c</fullName>
    <label>Polaris Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RCDM</fullName>
                <default>true</default>
                <label>RCDM</label>
            </value>
            <value>
                <fullName>RSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>