force-app/main/default/objects/POC_Product_Picker_Matrix__mdt/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <label>Product SKU</label>
    <type>TextArea</type>
</CustomField>