force-app/main/default/objects/POC_Product_Picker_Matrix__mdt/fields/Required_By__c.field-meta.xml
<CustomField>
    <fullName>Required_By__c</fullName>
    <label>Required By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>