force-app/main/default/objects/POC_Product_Picker_Matrix__mdt/fields/RSC_SKU__c.field-meta.xml
<CustomField>
    <fullName>RSC_SKU__c</fullName>
    <label>RSC SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>