force-app/main/default/objects/POC_Product_Picker_Matrix__mdt/fields/Sub_criteria__c.field-meta.xml
<CustomField>
    <fullName>Sub_criteria__c</fullName>
    <label>Sub-criteria</label>
    <length>100</length>
    <type>Text</type>
</CustomField>