force-app/main/default/objects/POC_Product_Picker_Matrix__mdt/fields/Switch_Type__c.field-meta.xml
<CustomField>
    <fullName>Switch_Type__c</fullName>
    <label>Sub category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>