force-app/main/default/objects/POC_Product_Picker_Matrix__mdt/listViews/Productmatrix.listView-meta.xml
<ListView>
    <fullName>Productmatrix</fullName>
    <columns>MasterLabel</columns>
    <columns>Polaris_Platform__c</columns>
    <columns>Product_SKU__c</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Criteria__c</columns>
    <columns>POC_Option__c</columns>
    <columns>Required_By__c</columns>
    <columns>RSC_SKU__c</columns>
    <columns>Switch_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Productmatrix</label>
</ListView>